--- a/Tema8/NUM_Tema8VlastneCislaVektory.ipynb
+++ b/Tema8/NUM_Tema8VlastneCislaVektory.ipynb
@@ -256,7 +256,7 @@
     "0 & \\frac{3}{4} \n",
     "\\end{pmatrix}$$\n",
     "\n",
-    "odkiaľ voľbou $x_2=0$, $x_1=1$ dostávame vlastný vektor $\\mathbf{x}=(1,0)^T$ prislúchajúci vlastnému číslu $\\lambda_1=\\frac{3}{2}$. Vektor $(1,0)^T$ je vlastne smer osi $x$ a spolu s vlastným číslom $\\lambda_1=\\frac{3}{2}$ nám to hovorí, že obrázok sa v zobrazení danom maticou $\\mathbf{A}$ natiahne (predĺži) v smere osi $x$  $50\\%$ (tzn. nový obrázok je 1.5-násobok pôvodného obrázka). <br/> \n",
+    "odkiaľ voľbou $x_2=0$, $x_1=1$ dostávame vlastný vektor $\\mathbf{x}=(1,0)^T$ prislúchajúci vlastnému číslu $\\lambda_1=\\frac{3}{2}$. Vektor $(1,0)^T$ je vlastne smer osi $x$ a spolu s vlastným číslom $\\lambda_1=\\frac{3}{2}$ nám to hovorí, že obrázok sa v zobrazení danom maticou $\\mathbf{A}$ natiahne (predĺži) v smere osi $x$ o $50\\%$ (tzn. nový obrázok je 1.5-násobok pôvodného obrázka). <br/> \n",
     "Analogicky určíme aj vlastný vektor prislúchajúci vlastnému číslu $\\lambda_2=1$. \n",
     "\n",
     "$$\\left(\\mathbf{A}-\\lambda\\mathbf{I}\\right)\\mathbf{x}=\\mathbf{0}$$ \n",
@@ -271,7 +271,7 @@
     "\\end{pmatrix}=\\mathbf{0}$$ \n",
     "\n",
     "$$\\begin{pmatrix}\n",
-    "\\frac{1}{2} - 1 & \\frac{3}{4} \\\\ \n",
+    "\\frac{3}{2} - 1 & \\frac{3}{4} \\\\ \n",
     "0 & 1-1 \n",
     "\\end{pmatrix}\n",
     "\\begin{pmatrix}\n",
@@ -280,7 +280,7 @@
     "\\end{pmatrix}=\\mathbf{0}$$ \n",
     "\n",
     "$$\\begin{pmatrix}\n",
-    "\\frac{3}{2} & \\frac{3}{4} \\\\ \n",
+    "\\frac{1}{2} & \\frac{3}{4} \\\\ \n",
     "0 & 0 \n",
     "\\end{pmatrix}\n",
     "\\begin{pmatrix}\n",
@@ -561,7 +561,7 @@
     "\n",
     "#### Poznámka 2 \n",
     "\n",
-    "Ak má matica $\\mathbf{A}$ $n$ rôznych vlastných čísel, potom prislúchajúcich $n$ vlastných vektorov je lineárne nezávislých a teda tvoria bázu $\\mathbf{C}^n$. Všimnime si ale, že $n$ rôznych vlastných čísel je postačujúca, avšak nie nutná podmienka k tomu, aby $n$ vlastných vektorov tvorilo bázu - stačí vziať napr. $\\mathbf{A}=\\mathbf{I}$ s vlastnými vektormi $\\mathbf{e}_1,\\mathbf{e}_2,\\ldots,\\mathbf{e}_n$ (stĺpce matice $\\mathbf{I}$).   \n",
+    "Ak má matica $\\mathbf{A}$ $n$ rôznych vlastných čísel, potom prislúchajúcich $n$ vlastných vektorov je lineárne nezávislých a teda tvoria bázu $\\mathbb{C}^n$. Všimnime si ale, že $n$ rôznych vlastných čísel je postačujúca, avšak nie nutná podmienka k tomu, aby $n$ vlastných vektorov tvorilo bázu - stačí vziať napr. $\\mathbf{A}=\\mathbf{I}$ s vlastnými vektormi $\\mathbf{e}_1,\\mathbf{e}_2,\\ldots,\\mathbf{e}_n$ (stĺpce matice $\\mathbf{I}$).   \n",
     "\n",
     "---"
    ]
@@ -811,7 +811,7 @@
     "\n",
     "$$|\\lambda_j(\\mathbf{A})-\\lambda_j(\\mathbf{B})|\\le\\lVert\\mathbf{A}-\\mathbf{B}\\rVert, \\quad j=1,2,\\ldots,n,$$ \n",
     "\n",
-    "pričom táto nerovnosť platí pre každú maticovú normu súhlasnú s vektorovou normou, tzn. $\\lVert\\mathbf{A}\\mathbf{x}\\rVert\\le\\lVert\\mathbf{A}\\mathbf{x}\\rVert$. \n",
+    "pričom táto nerovnosť platí pre každú maticovú normu súhlasnú s vektorovou normou, tzn. $\\lVert\\mathbf{A}\\mathbf{x}\\rVert\\le\\lVert\\mathbf{A}\\rVert\\lVert\\mathbf{x}\\rVert$. \n",
     "\n",
     "---"
    ]
@@ -1059,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Naprogramujte funkciu, ktorá vráti čísla podmienenosti pre jednotlivé vlastné hodnoty matice. Za správny, okomentovaný kód s testovacími príkladmi je možne získať dva bonusové body. </font>"
+    "<font color=purple> EXTRA: Naprogramujte funkciu, ktorá vráti čísla podmienenosti pre jednotlivé vlastné hodnoty matice. Za správny, okomentovaný kód s testovacími príkladmi je možné získať dva bonusové body. </font>"
    ]
   },
   {
@@ -1469,7 +1469,7 @@
     "\n",
     "$$R(\\mathbf{A},\\mathbf{x})=\\dfrac{\\mathbf{x}'\\mathbf{A}\\mathbf{x}}{\\mathbf{x}'\\mathbf{x}}=\\dfrac{\\mathbf{x}'\\lambda\\mathbf{x}}{\\mathbf{x}'\\mathbf{x}}=\\lambda.$$\n",
     "\n",
-    "Ak teda $\\mathbf{x}_k\\to\\mathbf{v}_1$, potom $R(\\mathbf{A},\\mathbf{x})\\to\\lambda_1$. Dá sa ukázať, že metóda konverguje aj v prípade násobného dominantného vlastného čísla. \n"
+    "Ak teda $\\mathbf{x}_k\\to\\mathbf{v}_1$, potom $R(\\mathbf{A},\\mathbf{x}_k)\\to\\lambda_1$. Dá sa ukázať, že **metóda konverguje aj v prípade násobného dominantného vlastného čísla**. \n"
    ]
   },
   {
@@ -1492,7 +1492,7 @@
    "source": [
     "Tu je **niekoľko nedostatkov mocninnej metódy**: \n",
     "\n",
-    "* Štartovací vektor $\\mathbf{x}_0$ nemusí obsahovať žiadnu zložku v smere dominantného vlastného vektora $\\mathbf{v}_1$ (t.j. $\\alpha_1=0$). Tento prípad je veľmi nepravdepodobný, keď volíme $\\mathbf{x}_0$ náhodne a prakticky nepredstauje žiaden problém. lebo zaokrúhľovacie chyby obvykle takú zložku vytvoria. \n",
+    "* Štartovací vektor $\\mathbf{x}_0$ nemusí obsahovať žiadnu zložku v smere dominantného vlastného vektora $\\mathbf{v}_1$ (t.j. $\\alpha_1=0$). Tento prípad je veľmi nepravdepodobný, keď volíme $\\mathbf{x}_0$ náhodne a prakticky nepredstavuje žiaden problém. lebo zaokrúhľovacie chyby obvykle takú zložku vytvoria. \n",
     "\n",
     "\n",
     "* Ak existuje viacero vlastných čísel s rovnakou absolútnou hodnotou, potom mocninná metóda nemusí vôbec konvergovať.  \n",
@@ -1745,7 +1745,7 @@
    "source": [
     "Nech pre vlastné čísla matice $\\mathbf{A}$ platí $|\\lambda_1|\\ge|\\lambda_2|\\ge\\ldots\\ge|\\lambda_p|>|\\lambda_{p+1}|\\ge\\ldots\\ge|\\lambda_n|$ a nech $\\mathbf{v}_i$ je vlastný vektor prislúchajúci k $\\lambda_i$. Označme $\\mathcal{S}=[\\mathbf{v}_1,\\mathbf{v}_2,\\ldots,\\mathbf{v}_p]$ (lineárny obal resp. obálka vektorov $\\mathbf{v}_1,\\mathbf{v}_2,\\ldots,\\mathbf{v}_p$). Ďalej označme $\\mathcal{S}_k$ lineárny obal stĺpcov matice $\\mathbf{X}_k$ resp. to je to isté ako lineárny obal stĺpcov matice $\\mathbf{A}^k\\mathbf{X}_0$. Ak žiaden stĺpcový vektor matice $\\mathbf{X}_0$ nie je kolmý na $\\mathcal{S}$, potom $\\mathcal{S}_k\\to\\mathcal{S}$, tzn. že vektorový priestor generovaný stĺpcami matice $\\mathbf{X}_k$ konverguje k vektorovému priestoru generovanému $p$ dominantnými vlastnými vektormi. \n",
     "\n",
-    "Ako pri mocninovej metóde, tak aj tu hrozí podtečenie alebo pretečenie. Naviac dochádza k zhoršeniu podmienenosti matíc $\\mathbf{X}_k$, takže stĺpce $\\mathbf{X}_k$ tvoria zle podmienenú bázu priestoru $\\mathcal{S}$. Uvedené nedostatky je možné prekonať, keď v každom kroku budeme stĺpce matice $\\mathbf{X}_k$ ortonormalizovať pomocou QR rozkladu. "
+    "Ako pri mocninovej metóde, tak aj tu hrozí podtečenie alebo pretečenie. Naviac dochádza k zhoršeniu podmienenosti matíc $\\mathbf{X}_k$, takže stĺpce $\\mathbf{X}_k$ tvoria zle podmienenú bázu priestoru $\\mathcal{S}$. Uvedené nedostatky je možné prekonať, keď v každom kroku budeme stĺpce matice $\\mathbf{X}_k$ ortonormalizovať pomocou **_[QR rozkladu](https://en.wikipedia.org/wiki/QR_decomposition)_**. "
    ]
   },
   {
@@ -1783,7 +1783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Redukovaným QR rozkladom rozumieme vyjadrenie $\\mathbf{Y}_k=\\mathbf{Q}_k\\mathbf{R}_k$, kde $\\mathbf{Q}_k$ je matica typu $n\\times p$ s vlastnosťou $\\mathbf{Q}_k'\\mathbf{Q}_k=\\mathbf{I}$ a $\\mathbf{R}_k$ je horná trojuholníková matica rádu $p$. Redukovaný QR rozklad určíme niektorou z metód uvedených v téme ??. \n",
+    "Redukovaným QR rozkladom rozumieme vyjadrenie $\\mathbf{Y}_k=\\mathbf{Q}_k\\mathbf{R}_k$, kde $\\mathbf{Q}_k$ je matica typu $n\\times p$ s vlastnosťou $\\mathbf{Q}_k'\\mathbf{Q}_k=\\mathbf{I}$ a $\\mathbf{R}_k$ je horná trojuholníková matica rádu $p$. Redukovaný QR rozklad určíme niektorou z metód uvedených napr. v [doplnkových materiáloch](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/QR_algoritmy.pdf). \n",
     "\n",
     "QR rozklad používame k zostrojeniu ortonormálnej bázy v priestore tvorenom stĺpcami matice $\\mathbf{Y}_k$. Za $\\mathbf{X}_k$ tu berieme $\\mathbf{Q}_k$ miesto $\\mathbf{Y}_k$. Keďže priestor generovaný stĺpcami matíc $\\mathbf{Q}_k$ a $\\mathbf{Y}_k$ je rovnaký,  vytvárame vlastne rovnaké podpriestory $\\mathcal{S}_k$ ako v algoritme simultánnych iterácií, no tentokrát s ortonormálnou bázou.  "
    ]
@@ -2230,7 +2230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
