--- a/Tema7/NUM_Tema7LinearneSystemy2.ipynb
+++ b/Tema7/NUM_Tema7LinearneSystemy2.ipynb
@@ -925,11 +925,15 @@
     "\n",
     "* postupne pre $i=1,2,\\ldots,k$ opakuj: $h_{ik}:=(\\mathbf{A}\\mathbf{v}_k,\\mathbf{v}_i)$; \n",
     "\n",
+    "\n",
     "* $\\mathbf{w}_k:=\\mathbf{A}\\mathbf{v}_k-\\displaystyle\\sum\\limits_{i=1}^{k}h_{ik}\\mathbf{v}_i$; \n",
+    "\n",
     "\n",
     "* $h_{k+1,k}:=\\lVert\\mathbf{w}_k\\rVert$; \n",
     "\n",
+    "\n",
     "* ak $h_{k+1,k}=0$: stop; \n",
+    "\n",
     "\n",
     "* $\\mathbf{v}_{k+1}:=\\mathbf{w}_k/h_{k+1,k}$;\n",
     "\n",
@@ -1013,15 +1017,19 @@
     "\n",
     "* $\\mathbf{w}_k:=\\mathbf{A}\\mathbf{v}_k$; \n",
     "\n",
+    "\n",
     "* postupne pre $i=1,2,\\ldots,k$ opakuj: \n",
     "    \n",
     "    * $h_{ik}:=(\\mathbf{w}_k,\\mathbf{v}_i)$; \n",
     "    \n",
     "    * $\\mathbf{w}_k:=\\mathbf{w}_k-h_{ik}\\mathbf{v}_i$; \n",
     "\n",
+    "\n",
     "* $h_{k+1,k}:=\\lVert\\mathbf{w}_k\\rVert$; \n",
     "\n",
+    "\n",
     "* ak $h_{k+1,k}=0$: stop; \n",
+    "\n",
     "\n",
     "* $\\mathbf{v}_{k+1}:=\\mathbf{w}_k/h_{k+1,k}$;\n",
     "\n",
@@ -1172,6 +1180,7 @@
     "\n",
     "* $\\mathbf{r}_0:=\\mathbf{b}-\\mathbf{A}\\mathbf{x}_0$; $\\beta:=\\lVert\\mathbf{r}_0\\rVert$; $\\mathbf{v}_1:=\\mathbf{r}_0/\\beta$; \n",
     "\n",
+    "\n",
     "* postupne pre $k=1,2,\\ldots,m$ opakuj: \n",
     "\n",
     "    * $\\mathbf{w}_k:=\\mathbf{A}\\mathbf{v}_k$; \n",
@@ -1191,7 +1200,8 @@
     "        * ak $|\\gamma_k|<\\varepsilon$: stop; \n",
     "        \n",
     "      inak $\\mathbf{v}_{k+1}:=\\mathbf{w}_k/h_{k+1,k}$; zostav $\\mathbf{V}_{k+1}$; \n",
-    "    \n",
+    "\n",
+    "\n",
     "* $\\tilde{\\mathbf{x}}:=\\mathbf{x}$; \n",
     "\n",
     "**Krok 3** \n",
@@ -2074,8 +2084,10 @@
     "    * $l_{ik}:=a_{ik}-\\displaystyle\\sum\\limits_{j=1}^{k-1}l_{ij}l_{kj}$; \n",
     "    \n",
     "    * ak $a_{ik}=0$: $d_k:=d_k+|l_{ik}|$; $d_i:=d_i+|l_{ik}|$; $l_{ik}:=0$; \n",
-    "    \n",
+    "\n",
+    "\n",
     "* $l_{kk}:=\\sqrt{d_k}$; \n",
+    "\n",
     "\n",
     "* postupne pre $i=k+1,k+2,\\ldots,n$ opakuj: \n",
     "\n",
@@ -2219,7 +2231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2233,7 +2245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
