Tema 8 & Doplnkove materialy updated.

--- a/Tema8/NUM_Tema8VlastneCislaVektoryVypoctyUlohy.ipynb
+++ b/Tema8/NUM_Tema8VlastneCislaVektoryVypoctyUlohy.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**2. Implementujte (aspoň dve) metódy pre výpočet niekoľkých (viacerých) vlastných čísel resp. vektorov a porovnajte na príkladoch rôznych matíc.** \n",
+    "**$\\clubsuit$ 2. Implementujte (aspoň dve) metódy pre výpočet niekoľkých (viacerých) vlastných čísel resp. vektorov a porovnajte na príkladoch rôznych matíc.** \n",
     "\n"
    ]
   },
@@ -71,7 +71,7 @@
    "source": [
     "---\n",
     "\n",
-    "**3. Nech $\\mathbf{A}=\\begin{pmatrix}0&1/4&1/5\\\\-1/4&0&1/3\\\\-1/5&-1/3&0\\end{pmatrix}$. Ukážte, že $\\rho(\\mathbf{A})<1$.** \n"
+    "**$\\clubsuit$ 3. Nech $\\mathbf{A}=\\begin{pmatrix}0&1/4&1/5\\\\-1/4&0&1/3\\\\-1/5&-1/3&0\\end{pmatrix}$. Ukážte, že $\\rho(\\mathbf{A})<1$.** \n"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**5. Predpokladajte, že vlastná hodnota $\\lambda_1$ i odpovedajúci vlastný vektor $\\mathbf{x}_1$ reálnej symetrickej matice sa získali mocninnou metódou, pričom platí** \n",
+    "**$\\clubsuit$ 5. Predpokladajte, že vlastná hodnota $\\lambda_1$ i odpovedajúci vlastný vektor $\\mathbf{x}_1$ reálnej symetrickej matice sa získali mocninnou metódou, pričom platí** \n",
     "\n",
     "$$|\\lambda_1|>|\\lambda_2|>|\\lambda_3|\\ge|\\lambda_4|\\ge\\ldots\\ge|\\lambda_n|.$$\n",
     "\n",
@@ -117,7 +117,7 @@
     "\\mathbf{q}^{(r+1)} &= \\mathbf{z}^{(r+1)} - \\left(\\left(\\mathbf{z}^{(r+1)}\\right)'\\mathbf{x}_1\\right)\\mathbf{x}_1,\n",
     "\\end{align*}\n",
     "\n",
-    "**kde $\\mathbf{z}^{(0)}$ je náhodne zvolený. Dokážte, že $\\mathbf{q}^{(r+1)}/\\lambda_2^{(r+1)}\\to c_2\\mathbf{x}_2$, pričom $\\mathbf{x}_2$ je vlastný vektor odpovedajúci vlastnej hodnote $\\lambda_2$ a $c_2$ je konštanta (spomeňte si, že vlastné vektory symetrickej matice $\\mathbf{A}$ sú ortogonálne, t.j. $\\mathbf{x}_i'\\mathbf{x}_j=0$ pre $i\\neq j$; naviac predpokladajte, že $\\mathbf{x}_1'\\mathbf{x}_1=1$).** "
+    "**kde $\\mathbf{z}^{(0)}$ je náhodne zvolený. Dokážte, že $\\mathbf{q}^{(r+1)}/\\lambda_2^{r+1}\\to c_2\\mathbf{x}_2$, pričom $\\mathbf{x}_2$ je vlastný vektor odpovedajúci vlastnej hodnote $\\lambda_2$ a $c_2$ je konštanta (spomeňte si, že vlastné vektory symetrickej matice $\\mathbf{A}$ sú ortogonálne, t.j. $\\mathbf{x}_i'\\mathbf{x}_j=0$ pre $i\\neq j$; naviac predpokladajte, že $\\mathbf{x}_1'\\mathbf{x}_1=1$).** "
    ]
   },
   {
@@ -138,11 +138,11 @@
    "source": [
     "--- \n",
     "\n",
-    "**6. Nájdite aproximáciu najmenšieho vlastného čísla $\\lambda_5$ i odpovedajúceho vlastného vektora matice** \n",
+    "**$\\clubsuit$ 6. Vhodnou, Vami implementovanou metódou nájdite aproximáciu najmenšieho vlastného čísla $\\lambda_5$ i odpovedajúceho vlastného vektora matice** \n",
     "\n",
     "![o22.PNG](attachment:o22.PNG) \n",
     "\n",
-    "**Ak viete, že $\\lambda_5\\approx5$, aplikujte metódu inverznej transformácie s posunom pre nájdenie príslušného vlastného vektora** "
+    "**Ak viete, že $\\lambda_5\\approx5$, aplikujte Vami implementovanú metódu inverznej transformácie s posunom pre nájdenie príslušného vlastného vektora.** "
    ]
   },
   {
@@ -158,7 +158,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**7. Zdôvodnite, že vlastné čísla matice $\\mathbf{A}^{-1}$ sú prevrátenými hodnotami vlastných čísel matice $\\mathbf{A}$**\n"
+    "**$\\clubsuit$ 7. Zdôvodnite, že vlastné čísla matice $\\mathbf{A}^{-1}$ sú prevrátenými hodnotami vlastných čísel matice $\\mathbf{A}$**\n"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**9. Nájdite aproximácie vlastných čísel i vlastných vektorov matice** \n",
+    "**$\\clubsuit$ 9. Nájdite aproximácie všetkých vlastných čísel i prislúchajúcich vlastných vektorov matice pomocou Vami implementovanej vhodnej metódy. Konfrontujte (počet iterácií/presnosť/čas) Vaše výsledky s metódou zabudovanou v Python-e.** \n",
     "\n",
     "![o25.PNG](attachment:o25.PNG) \n"
    ]
@@ -227,7 +227,7 @@
    "source": [
     "---\n",
     "\n",
-    "**10. Vykonajte niekoľko iterácií mocninovej metódy s maticou $\\mathbf{A}=\\begin{pmatrix}2&-1&0\\\\-1&2&-1\\\\0&-1&2\\end{pmatrix}$, pričom voľte rôzne štartovacie vektory a porovnajte získané výsledky navzájom, ale aj so skutočnými hodnotami. Pre porovnanie aplikujte tiež Gerschgorinovu vetu na lokalizáciu vlastných hodnôt.** \n",
+    "**$\\clubsuit$ 10. Vykonajte niekoľko iterácií mocninovej metódy s maticou $\\mathbf{A}=\\begin{pmatrix}2&-1&0\\\\-1&2&-1\\\\0&-1&2\\end{pmatrix}$, pričom voľte rôzne štartovacie vektory a porovnajte získané výsledky navzájom, ale aj so skutočnými hodnotami. Pre porovnanie aplikujte tiež Gerschgorinovu vetu na lokalizáciu vlastných hodnôt.** \n",
     "\n"
    ]
   },
@@ -249,7 +249,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**11. Hotellingova deflácia. Predpokladajte, že najväčšie vlastné číslo $\\lambda_1$ s príslušným vlastným vektorom $\\mathbf{v}_1$ symetrickej $n \\times n$ matice $\\mathbf{A}$  boli získané. Ukážte, že matica**\n",
+    "**$\\clubsuit$ 11. Hotellingova deflácia. Predpokladajte, že najväčšie vlastné číslo $\\lambda_1$ s príslušným vlastným vektorom $\\mathbf{v}_1$ symetrickej $n \\times n$ matice $\\mathbf{A}$  boli získané. Ukážte, že matica**\n",
     "\n",
     "$$\\mathbf{B}=\\mathbf{A}-\\dfrac{\\lambda_1}{\\mathbf{v}_1'\\mathbf{v}_1}\\mathbf{v}_1\\mathbf{v}_1'$$\n",
     "\n",
@@ -271,7 +271,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**12. Sú dané podobné matice $\\mathbf{A}$, $\\mathbf{B}$ rozmerov $n \\times n$, pričom $\\mathbf{B}=\\begin{pmatrix}\\lambda&\\mathbf{a}'\\\\\\mathbf{0}&\\mathbf{A}_{22}\\end{pmatrix}$, kde $\\lambda\\in\\mathbb{R}$, $\\mathbf{a}\\in\\mathbb{R}^{n-1}$, $\\mathbf{A}_{22}\\in\\mathbb{R}^{(n-1)\\times (n-1)}$.** \n",
+    "**$\\clubsuit$ 12. Sú dané podobné matice $\\mathbf{A}$, $\\mathbf{B}$ rozmerov $n \\times n$, pričom $\\mathbf{B}=\\begin{pmatrix}\\lambda&\\mathbf{a}'\\\\\\mathbf{0}&\\mathbf{A}_{22}\\end{pmatrix}$, kde $\\lambda\\in\\mathbb{R}$, $\\mathbf{a}\\in\\mathbb{R}^{n-1}$, $\\mathbf{A}_{22}\\in\\mathbb{R}^{(n-1)\\times (n-1)}$.** \n",
     "\n",
     "**a) Dokážte, že $\\lambda\\in\\lambda(\\mathbf{A})$.** Pomôcka: Čomu je rovný súčin $\\mathbf{B}\\mathbf{e}_1$, kde $\\mathbf{e}_1$ je prvý vektor kanonickej bázy? \n",
     "\n",
@@ -404,7 +404,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**19. Vykonajte jednu iteráciu QR algoritmu s posunom $\\mu=a_{nn}$ pre maticu $\\mathbf{A}=\\begin{pmatrix}0&1\\\\1&0\\end{pmatrix}$. Zdôvodnite/ukážte, že zvolený QR algoritmus nekonverguje pre takto zvolenú maticu $\\mathbf{A}$. Viete nájsť vhodný posun $\\mu$ tak, aby algoritmus konvergoval?** \n",
+    "**$\\clubsuit$ 19. Vykonajte jednu iteráciu QR algoritmu s posunom $\\mu=a_{nn}$ pre maticu $\\mathbf{A}=\\begin{pmatrix}0&1\\\\1&0\\end{pmatrix}$. Zdôvodnite/ukážte, že zvolený QR algoritmus nekonverguje pre takto zvolenú maticu $\\mathbf{A}$. Viete nájsť vhodný posun $\\mu$ tak, aby algoritmus konvergoval?** \n",
     "\n"
    ]
   },
@@ -421,7 +421,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**20. Overte, že mocninná metóda nedokáže nájsť približnú hodnotu dominantného vlastného čísla matice $\\mathbf{A}=\\begin{pmatrix}1/3&2/3&2&3\\\\1&0&-1&2\\\\0&0&-5/3&-2/3\\\\0&0&1&0\\end{pmatrix}$. Vysvetlite, v čom je problém.**"
+    "**$\\clubsuit$ 20. Overte, že mocninná metóda nedokáže nájsť približnú hodnotu dominantného vlastného čísla matice $\\mathbf{A}=\\begin{pmatrix}1/3&2/3&2&3\\\\1&0&-1&2\\\\0&0&-5/3&-2/3\\\\0&0&1&0\\end{pmatrix}$. Vysvetlite, v čom je problém a aplikujte vhodnejšiu metódu.**"
    ]
   },
   {
@@ -488,7 +488,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**23. (Populačná dynamika).** Bolo navrhnutých niekoľko matematických modelov s cieľom predpovedať evolúciu určitých druhov (buď ľudí alebo zvierat). Najjednoduchší populačný model, ktorý zaviedol v roku 1920 Lotka a o 20 rokov neskôr formalizoval Leslie, je založený na miere úmrtnosti a plodnosti pre rôzne vekové intervaly, povedzme $i = 0,\\ldots,n$. Nech $x_i^{(t)}$ označuje počet žien/samíc (na mužoch v tomto kontexte nezáleží), ktorých vek v čase $t$  patrí do $i$-teho intervalu. Počiatočné hodnoty $x_i^{(0)}$ sú dané. Naviac, nech $s_i$ značí mieru prežitia žien/samíc patriacich do $i$-teho intervalu a $m_i$ priemerný počet ženských/samičích potomkov pochádzajúcich od ženy/samice v $i$-tom intervale. Model od Lotku a Leslieho je daný sústavou rovníc \n",
+    "**$\\clubsuit$ 23. (Populačná dynamika).** Bolo navrhnutých niekoľko matematických modelov s cieľom predpovedať evolúciu určitých druhov (buď ľudí alebo zvierat). Najjednoduchší populačný model, ktorý zaviedol v roku 1920 Lotka a o 20 rokov neskôr formalizoval Leslie, je založený na miere úmrtnosti a plodnosti pre rôzne vekové intervaly, povedzme $i = 0,\\ldots,n$. Nech $x_i^{(t)}$ označuje počet žien/samíc (na mužoch v tomto kontexte nezáleží), ktorých vek v čase $t$  patrí do $i$-teho intervalu. Počiatočné hodnoty $x_i^{(0)}$ sú dané. Naviac, nech $s_i$ značí mieru prežitia žien/samíc patriacich do $i$-teho intervalu a $m_i$ priemerný počet ženských/samičích potomkov pochádzajúcich od ženy/samice v $i$-tom intervale. Model od Lotku a Leslieho je daný sústavou rovníc \n",
     "\n",
     "\\begin{align*}\n",
     "x_{i+1}^{(t+1)}&=x_i^{(t)}s_i, \\quad i=0,\\ldots,n-1, \\\\\n",
@@ -531,7 +531,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**24. (Medzimestská železničná sieť).** Pre $n$ daných miest nech $\\mathbf{A}$ je matica, ktorej prvok $a_{ij}$ sa rovná $1$, ak je $i$-té mesto priamo spojené s $j$-tým mestom, v opačnom prípade je to $0$. Dá sa ukázať, že komponenty vlastného vektora $\\mathbf{x}$ (jednotkovej dĺžky) spojené s maximálnou vlastnou hodnotou poskytujú mieru dostupnosti (ktorá je mierou jednoduchosti prístupu) do rôznych miest. **Určte tento vektor pre prípad železničného systému jedenástich najdôležitejších miest v Lombardii** (viď obrázok). \n",
+    "**$\\clubsuit$ 24. (Medzimestská železničná sieť).** Pre $n$ daných miest nech $\\mathbf{A}$ je matica, ktorej prvok $a_{ij}$ sa rovná $1$, ak je $i$-té mesto priamo spojené s $j$-tým mestom, v opačnom prípade je to $0$. Dá sa ukázať, že komponenty vlastného vektora $\\mathbf{x}$ (jednotkovej dĺžky) spojené s maximálnou vlastnou hodnotou poskytujú mieru dostupnosti (ktorá je mierou jednoduchosti prístupu) do rôznych miest. **Určte tento vektor pre prípad železničného systému jedenástich najdôležitejších miest v Lombardii** (viď obrázok). \n",
     "\n",
     "![o33.PNG](attachment:o33.PNG) \n"
    ]
@@ -571,7 +571,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -585,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
