--- a/Tema9/NUM_Tema9Optimalizacia.ipynb
+++ b/Tema9/NUM_Tema9Optimalizacia.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "$$f(x,y)=\\cos\\left(x^2\\right)+e^{(y-6)^2}+3(x+y)^4$$\n",
     "\n",
-    "kde $x$ a $y$ sú parametre, ktoré je potrebné zvoliť/nastaviť a $f(x,y)$ je funkcia súvisiaca s výrobnými nákladmi, teda je potrebné ju minimalizovať. V aktuálnej téme predstavíme vybrané numerické metódy vyvinuté metódy na lokalizáciu optimálnych bodov $[x, y]$ (resp. ich aproximáciu) v takýchto úlohách.\n",
+    "kde $x$ a $y$ sú parametre, ktoré je potrebné zvoliť/nastaviť a $f(x,y)$ je funkcia súvisiaca s výrobnými nákladmi, teda je potrebné ju minimalizovať. V aktuálnej téme predstavíme vybrané numerické metódy vyvinuté na lokalizáciu optimálnych bodov $[x, y]$ (resp. ich aproximáciu) v takýchto úlohách.\n",
     "\n",
     "Optimalizačné úlohy spočívajú vo výbere najlepšieho riešenia z danej množiny možných riešení. Matematicky sa dá optimalizačná úloha formulovať ako nájdenie prvku $x^*\\in M$ takého, že pre ľubovoľný prvok $x\\in M$ platí \n",
     "\n",
@@ -77,7 +77,7 @@
     "f\\left(x^*\\right)\\le f(x), \\quad \\forall x \\in M, \n",
     "\\end{align*}\n",
     "\n",
-    "kde $f:M\\to\\mathbb{R}$ je minimalizovaná (**_účelová_** / cieľová / kriteriálna) funkcia a $M$ je **_množina prípustných riešení_**. Pokiaľ prípustným riešením môže byť každý bod $x=[x_1,x_2,\\ldots,x_n]$ $n$-rozmerného Euklidovho priestoru $\\mathbb{R}^n$, tak potom $M=\\mathbb{R}^n$ a hovoríme o **_nepodmienenej optimalizácii_**. O účelovej funkcii $f$ budeme predpokladať, že je spojitá a v závislosti od prezentovanej metódy budeme predpokladať aj existenciu derivácií príslušných rádov.   \n",
+    "kde $f:M\\to\\mathbb{R}$ je minimalizovaná **_účelová_** (cieľová / kriteriálna) funkcia a $M$ je **_množina prípustných riešení_**. Pokiaľ prípustným riešením môže byť každý bod $x=[x_1,x_2,\\ldots,x_n]$ $n$-rozmerného Euklidovho priestoru $\\mathbb{R}^n$, tak potom $M=\\mathbb{R}^n$ a hovoríme o **_nepodmienenej optimalizácii_**. O účelovej funkcii $f$ budeme predpokladať, že je spojitá a v závislosti od prezentovanej metódy budeme predpokladať aj existenciu derivácií príslušných rádov.   \n",
     "\n",
     "Optimalizačná úloha \\eqref{eq:Optim1} sa nazýva **_úlohou globálnej optimalizácie_**. My sa obmedzíme na jednoduchšiu úlohu tzv. **_lokálnej optimalizácie_**, ktorá spočíva v nájdení **_lokálneho minima_**, t.j. prvku $x^*\\in M$ takého, že platí \n",
     "\n",
@@ -113,7 +113,7 @@
     "\\text{minimalizovať} \\quad & f(x) \\\\\n",
     "\\text{vzhľadom k} \\quad & c_i(x) = 0, \\quad i\\in\\{1,2,\\ldots,m_1\\} \\\\ \n",
     "& g_j(x) \\le 0, \\quad j\\in\\{1,2,\\ldots,m_2\\} \\\\\n",
-    "\\text{pričom} \\quad & f:D\\to\\mathbb{R}; \\, c_i,g_j: D\\to\\mathbb{R}, \\text{ kde } D\\subset\\mathbb{R}^n \\text{ a } x=[x_1,\\ldots,n_n].\n",
+    "\\text{pričom} \\quad & f:D\\to\\mathbb{R}; \\, c_i,g_j: D\\to\\mathbb{R}, \\text{ kde } D\\subset\\mathbb{R}^n \\text{ a } x=[x_1,\\ldots,x_n].\n",
     "\\end{align*}\n",
     "\n",
     "Takto sformulovaný optimalizačný problém sa niekedy nazýva **_nelineárny program_**. Toto pomenovanie nevychádza z počítačového programovania, ale zo skutočnosti, že optimalizačné problémy často pochádzajú z operačného výskumu, kde riešenie problému poskytuje manažérom program výroby a distribúcie. V tomto kontexte účelová funkcia $f$ predstavuje celkové náklady, ktoré je potrebné minimalizovať. Špeciálnym prípadom uvedenej optimalizačnej úlohy je napr. **_úloha lineárneho programovania_** (lineárny program), kde $f,c_i,g_i$ sú lineárne funkcie. Ak sú tieto funkcie konvexné, hovoríme o **_konvexnom optimalizačnom probléme_**. \n",
@@ -671,7 +671,7 @@
     "Prvá možnosť vedie ku kvadratickej rovnici $t^2-2t+1=0$ a poskytuje riešenie $t=0.5$, ktoré nevyhovuje podmienke (nerovnosti uvedenej vyššie). Druhá možnosť vedie k rovnici $t^2+t-1=0$ a dáva riešenie $\\tau=\\dfrac{\\sqrt{5}-1}{2}=0.618033988749\\ldots$. \n",
     "\n",
     "\n",
-    "* Ak je počet krokov (iterácií) známy vopred, tak efektívnejšia je tzv. **_Fibonacciho metóda_** (pozrite doplnkové materiály alebo napr. [tento odkaz](http://lendek.net/teaching/OPT/numerical%20optimization.pdf)). \n",
+    "* Ak je počet krokov (iterácií) známy vopred, tak efektívnejšia je tzv. **_Fibonacciho metóda_** (pozrite [doplnkové materiály](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/FibonaccihoMetoda.pdf) alebo napr. [tento odkaz](http://lendek.net/teaching/OPT/numerical%20optimization.pdf)). \n",
     "\n",
     "---"
    ]
@@ -743,7 +743,7 @@
     "![o11.png](attachment:o11.png) \n",
     "$$\\text{Zdroj: Růžičková, I. & Hlavička, R. (2020).}$$ \n",
     "\n",
-    "Zo vzťahu \\eqref{eq:Optim6} vyplýva, že $x_{k+1}\\in(a_k,b_k)$. Ak náhodou $x_{k+1}=c_k$, tak priradíme do $x_{k+1}$ iný vnútorný bod z intervalu $(a_k,b_k)$. S týmto slabým miestom metódy kvadratickej interpolácie (a s ďalšími tu neuvedenými nedostatkami) sa úspešne vyrovnáva ***[Brentova metóda](https://www.youtube.com/watch?v=BQm7uTYC0sg&ab_channel=OscarVeliz)***. "
+    "Zo vzťahu \\eqref{eq:Optim6} vyplýva, že $x_{k+1}\\in(a_k,b_k)$. Ak náhodou $x_{k+1}=c_k$, tak priradíme do $x_{k+1}$ iný vnútorný bod z intervalu $(a_k,b_k)$. S týmto slabým miestom metódy kvadratickej interpolácie (a s ďalšími tu neuvedenými nedostatkami) sa úspešne vyrovnáva **_[Brentova metóda](https://www.youtube.com/watch?v=BQm7uTYC0sg&ab_channel=OscarVeliz)_**. "
    ]
   },
   {
@@ -1955,7 +1955,7 @@
    "source": [
     "--- \n",
     "\n",
-    "#### Poznámka 11?\n",
+    "#### Poznámka 11\n",
     "\n",
     "* Mierne odlišný pohľad na Newtonovu metódu je taký, že vychádza sa z kvadratického modelu (Taylorov rozvoj) pre $f$ definovaného v okolí iterácie $x_k$, konkrétne $f(x)\\approx m(x)=m_k(x)=f(x_k)+(x-x_k)'\\nabla f(x_k)+\\dfrac{1}{2}(x-x_k)'\\nabla^2f(x_k)(x-x_k)$, pričom minimum $m$ sa dosahuje v bode $x$, pre ktorý platí $\\nabla m(x)=\\mathbf{0}$, tzn. $\\nabla f(x_k)+\\nabla^2f(x_k)(x-x_k)=\\mathbf{0}$, odkiaľ dostávame tzv. \"Newtonov krok\" v tvare $x_{k+1}=x_k-\\left[\\nabla^2f(x_k)\\right]^{-1}\\nabla f(x_k)$.\n",
     "\n",
@@ -2446,7 +2446,7 @@
    "source": [
     "--- \n",
     "\n",
-    "#### Poznámka 11\n",
+    "#### Poznámka 12\n",
     "\n",
     "Riešenie $x^*$ sústavy $n$ nelineárnych rovníc $\\mathbf{f}(x)=\\mathbf{0}$ môžeme získať ako bod, v ktorom funkcia $h(x)=\\displaystyle\\sum\\limits_{i=1}^{n}\\left[f_i(x)\\right]^2$ (t.j. súčet štvorcov reziduií) nadobúda svoje globálne minimum (lebo $0=h\\left(x^*\\right)=\\underset{x\\in\\mathbb{R}^n}{\\min}\\,h(x)$ práve vtedy, keď $\\mathbf{f}\\left(x^*\\right)=\\mathbf{0}$). Na minimalizáciu funkcie $h(x)$ je možné aplikovať niektorý z algoritmov pre riešenie [nelineárnej úlohy najmenších štvorcov](https://bookdown.org/mike/data_analysis/non-linear-regression.html#non-linear-least-squares) (alebo pozri [sem](http://www2.imm.dtu.dk/pubdb/edoc/imm3215.pdf)). \n",
     "\n",
@@ -2473,7 +2473,7 @@
    "source": [
     "--- \n",
     "\n",
-    "#### Poznámka 12\n",
+    "#### Poznámka 13\n",
     "\n",
     "Niektoré dôležité účelové funkcie sú síce diferencovateľné, avšak nie je možné zadať explicitné pravidlo pre výpočet gradientu (napr. úloha [tvarovej optimalizácie v mechanike](https://www.ljll.math.upmc.fr/frey/cours/EAFIT/shapeOptim.pdf)). V tom prípade je vhodné aplikovať [numerické derivovanie pre aproximáciu derivácií](https://rh8liuqy.github.io/Finite_Difference.html) (aj vyššieho rádu), ktoré sú súčasťou gradientu, Hessiánu, Jacobiho matice a pod. (prípadne pozrite [doplnkový materiál](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/AproximaciaGradientuKonecnymiDiferenciami.pdf)).  \n",
     "\n",
@@ -2552,7 +2552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2566,7 +2566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
