--- a/Tema9/NUM_Tema9Optimalizacia.ipynb
+++ b/Tema9/NUM_Tema9Optimalizacia.ipynb
@@ -1351,7 +1351,7 @@
     "       \n",
     "          * ak $f(x_c)<f(x_w)$: $x_w:=x_c$; \n",
     "           \n",
-    "            inak $x_w:=(x_b+x_w)/2$; $x_g:=x_m$; \n",
+    "            inak $x_w:=(x_b+x_w)/2$; $x_g:=\\bar{x}$; \n",
     "\n",
     "**Krok 4** \n",
     "\n",
@@ -2552,7 +2552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2566,7 +2566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
