--- a/Tema9/NUM_Tema9Optimalizacia.ipynb
+++ b/Tema9/NUM_Tema9Optimalizacia.ipynb
@@ -341,7 +341,7 @@
     "\n",
     "\\begin{align*}\\label{eq:Optim4} \\tag{4}\n",
     "a<d<&c<e<b \\\\ \n",
-    "c=(b-a)/2, \\,\\, d=(c&-a)/2, \\,\\, e=(b-c)/2. \n",
+    "c=(b+a)/2, \\,\\, d=(c&+a)/2, \\,\\, e=(b+c)/2. \n",
     "\\end{align*}\n",
     "\n",
     "Výber redukovaného intervalu sa riadi nasledujúcimi pravidlami: \n",
@@ -2552,7 +2552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2566,7 +2566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
