--- a/Tema9/NUM_Tema9OptimalizaciaUlohy.ipynb
+++ b/Tema9/NUM_Tema9OptimalizaciaUlohy.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "---\n",
     "\n",
-    "**1. Ukážte, že matica $\\mathbf{B}_{k+1}$ definovaná vzťahom $(25)$, spĺňa kvázi-Newtonovskú rovnicu t.j. $\\mathbf{B}_{k+1}\\mathbf{d}=\\mathbf{y}$.** \n"
+    "**$\\clubsuit$ 1. Ukážte, že matica $\\mathbf{B}_{k+1}$ definovaná vzťahom $(19)$, spĺňa kvázi-Newtonovskú rovnicu t.j. $\\mathbf{B}_{k+1}\\mathbf{d}=\\mathbf{y}$.** \n"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "source": [
     "---\n",
     "\n",
-    "**3. Naprogramujte metódu zlatého rezu i Fibonacciho metódu a nájdite pomocou nich približnú hodnotu minima funkcie $f(x)$ s presnosťou $\\varepsilon=10^{-6}$, ak je dané:** \n",
+    "**$\\clubsuit$ 3. Naprogramujte metódu zlatého rezu i Fibonacciho metódu a nájdite pomocou nich približnú hodnotu minima funkcie $f(x)$ s presnosťou $\\varepsilon=10^{-6}$, ak je dané:** \n",
     "\n",
     "**a) $f(x)=x^4-3x^3+6x^2-4x$ na intervale $\\langle0,1\\rangle$;** \n",
     "\n",
@@ -101,7 +101,7 @@
    "source": [
     "---\n",
     "\n",
-    "**4. Naprogramujte metódu kvadratickej interpolácie a určte približnú hodnotu minima funkcie $f(x)$ s presnosťou $\\varepsilon=10^{-6}$, ak je dané:** \n",
+    "**$\\clubsuit$ 4. Naprogramujte metódu kvadratickej interpolácie a určte približnú hodnotu minima funkcie $f(x)$ s presnosťou $\\varepsilon=10^{-6}$, ak je dané:** \n",
     "\n",
     "**a) $f(x)=\\cos\\left(x^2+x\\right)\\sin x$ na intervale $\\langle1,2\\rangle$;** \n",
     "\n",
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5. Pre nižšie uvedené funkcie vykonajte nasledovné: znázornite ich gafy, nájdite ich minimá metódou bisekcie, zlatého rezu i Fibonacciho metódou. Porovnajte rýchlosť konvergencie (t.j. počty iterácií) a tiež počty vyčíslení účelovej funkcie u použitých  metód pri jednotlivých zadaných funkciách.** \n",
+    "**$\\clubsuit$ 5. Pre nižšie uvedené funkcie vykonajte nasledovné: znázornite ich gafy, nájdite ich minimá metódou bisekcie, zlatého rezu i Fibonacciho metódou. Porovnajte rýchlosť konvergencie (t.j. počty iterácií) a tiež počty vyčíslení účelovej funkcie u použitých  metód pri jednotlivých zadaných funkciách.** \n",
     "\n",
     "$$\\text{a) } f(x)=x^4+8x^3+24x^2+32x+16; \\qquad \\text{b) } g(x)=\\sin^2x; \\qquad \\text{c) } h(x)=\\cos^2x.$$"
    ]
@@ -141,7 +141,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**6. Naprogramujte Nelderovu-Meadovu metódu a približne určte minimum funkcie $f(x,y)$ s presnosťou $\\varepsilon_1=10^{-6}$, $\\varepsilon_2=10^{-8}$, ak je dané:** \n",
+    "**$\\clubsuit$ 6. Naprogramujte Nelderovu-Meadovu metódu a približne určte minimum funkcie $f(x,y)$ s presnosťou $\\varepsilon_1=10^{-6}$, $\\varepsilon_2=10^{-8}$, ak je dané:** \n",
     "\n",
     "**a) $f(x,y)=x^2+5y^2+2xy-3x-y$, $x_0=[2.1,0.7]$;** \n",
     "\n",
@@ -165,7 +165,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**7. Naprogramujte metódu najväčšieho spádu a určte minimum funkcie $f(x,y)$ s presnosťou $\\varepsilon=0.1$, ak je dané:** \n",
+    "**$\\clubsuit$ 7. Naprogramujte metódu najväčšieho spádu a určte minimum funkcie $f(x,y)$ s presnosťou $\\varepsilon=0.1$, ak je dané:** \n",
     "\n",
     "**a) $f(x,y)=x^4+y^4+x^2-2xy+y^2-x$, $x_0=[0,0]$;** \n",
     "\n",
@@ -186,7 +186,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**8. Naprogramujte Newtonovu metódu a vypočítajte minimá funkcií z predchádzajúcej úlohy s presnosťou $\\varepsilon=10^{-6}$, pričom výsledky z predchádzajúcej úlohy použite ako počiatočné aproximácie pre Newtonovu metódu. Experimentujte s presnosťou $\\varepsilon$ a všímajte si konvergenciu uvažovanej numerickej metódy. Pre porovnanie naprogramujte i DFP a BFGS metódu.** "
+    "**$\\clubsuit$ 8. Naprogramujte Newtonovu metódu a vypočítajte minimá funkcií z predchádzajúcej úlohy s presnosťou $\\varepsilon=10^{-6}$, pričom výsledky z predchádzajúcej úlohy použite ako počiatočné aproximácie pre Newtonovu metódu. Experimentujte s presnosťou $\\varepsilon$ a všímajte si konvergenciu uvažovanej numerickej metódy. Pre porovnanie naprogramujte i DFP a BFGS metódu.** "
    ]
   },
   {
@@ -337,7 +337,7 @@
    "source": [
     "---\n",
     "\n",
-    "**14. Vhodnou numerickou metódou určte $x$ (podľa uvedeného obrázka), ktoré minimalizuje vzdialenosť $d$ - ide o vzdialenosť základne načrtnutej oblasti a jej stredu $C$ (resp. ťažiska).** \n",
+    "**$\\clubsuit$ 14. Vhodnou numerickou metódou určte $x$ (podľa uvedeného obrázka), ktoré minimalizuje vzdialenosť $d$ - ide o vzdialenosť základne načrtnutej oblasti a jej stredu $C$ (resp. ťažiska).** \n",
     "\n",
     "![o28.PNG](attachment:o28.PNG) \n"
    ]
@@ -360,7 +360,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**15. Hárok kartónu je zložený pozdĺž prerušovaných čiar, aby vytvoril škatuľu s otvoreným vrchom. Ak má byť objem škatule $1\\,m^3$, určte rozmery $a$, $b$, pri ktorých by bolo spotrebované najmenšie množstvo kartónu. Výsledok overte analyticky.** \n",
+    "**$\\clubsuit$ 15. Hárok kartónu je zložený pozdĺž prerušovaných čiar, aby vytvoril škatuľu s otvoreným vrchom. Ak má byť objem škatule $1\\,m^3$, určte rozmery $a$, $b$, pri ktorých by bolo spotrebované najmenšie množstvo kartónu. Výsledok overte analyticky.** \n",
     "\n",
     "![o29.PNG](attachment:o29.PNG) \n"
    ]
@@ -401,7 +401,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**13. Nájdite bod hyperboly s rovnicou $y=1/x$ taký, aby bol čo najbližšie k bodu $[2,3]$.  Využite pri tom metódu zlatého rezu.** \n"
+    "**$\\clubsuit$ 17. Nájdite bod hyperboly s rovnicou $y=1/x$ taký, aby bol čo najbližšie k bodu $[2,3]$.  Využite pri tom metódu zlatého rezu.** \n"
    ]
   },
   {
@@ -417,7 +417,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**14. Aplikujte Nelderovu-Meadovu i Newtonovu metódu na nájdenie minima funkcie $f(x,y)=e^{-x^2y^2}+(x-1)^2+(y-1)^2$. Vyskúšajte rôzne štartovacie podmienky a výsledky porovnajte. Koľko platných cifier viete dostať pomocou uvedených metód?**"
+    "**$\\clubsuit$ 18. Aplikujte Nelderovu-Meadovu i Newtonovu metódu na nájdenie minima funkcie $f(x,y)=e^{-x^2y^2}+(x-1)^2+(y-1)^2$. Vyskúšajte rôzne štartovacie podmienky a výsledky porovnajte. Koľko platných cifier viete dostať pomocou uvedených metód?**"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**15. Znázornite nižšie uvedené funkcie a aplikujte Newtonovu metódu na nájdenie ich miním s presnosťou na šesť desatinných miest (každá funkcia má dve minimá):** \n",
+    "**$\\clubsuit$ 19. Znázornite nižšie uvedené funkcie a aplikujte Newtonovu metódu na nájdenie ich miním s presnosťou na šesť desatinných miest (každá funkcia má dve minimá):** \n",
     "\n",
     "$$\\text{a) } f(x,y) = x^4+y^4+2x^2y^2+6xy-4x-4y+1 ; \\qquad \\text{b) } f(x,y) = x^6+y^6+3x^2y^2-x^2-y^2-2xy .$$\n"
    ]
@@ -451,7 +451,7 @@
    "source": [
     "---\n",
     "\n",
-    "**16. Aplikujte metódu najväčšieho spádu a tiež metódu združených gradientov na nájdenie miním funkcií z predošlej úlohy.** \n"
+    "**20. Aplikujte metódu najväčšieho spádu a tiež metódu združených gradientov na nájdenie miním funkcií z predošlej úlohy.** \n"
    ]
   },
   {
@@ -467,7 +467,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**17. Znázornite nižšie uvedené funkcie a pomocou metódy združených gradientov nájdite ich minimá s presnosťou na päť desatinných miest:** \n",
+    "**$\\clubsuit$ 21. Znázornite nižšie uvedené funkcie a pomocou metódy združených gradientov nájdite ich minimá s presnosťou na päť desatinných miest:** \n",
     "\n",
     "$$\\text{a) } f(x,y) = x^4+y^4+2x^2y^2+6xy-4x-4y+1 ; \\qquad \\text{b) } g(x,y) = x^6+y^6+3x^2y^2-x^2-y^2-2xy .$$"
    ]
@@ -485,7 +485,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**18. Nájdite minimum Rosenbrockovej funkcie $f(x,y)=100\\left(y-x^2\\right)^2+(x-1)^2$ Newtonovou metódou a tiež metódou najväčšieho spádu. Štartovací bod zvoľte so súradnicami $[2,2]$. Po koľkých iteráciach sa riešenia prestanú spresňovať? Vysvetlite rozdiel v zistených presnostiach.** \n"
+    "**22. Nájdite minimum Rosenbrockovej funkcie $f(x,y)=100\\left(y-x^2\\right)^2+(x-1)^2$ Newtonovou metódou a tiež metódou najväčšieho spádu. Štartovací bod zvoľte so súradnicami $[2,2]$. Po koľkých iteráciach sa riešenia prestanú spresňovať? Vysvetlite rozdiel v zistených presnostiach.** \n"
    ]
   },
   {
@@ -501,7 +501,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**19. Pomocou dvoch vhodných metód nájdite s dostatočnou presnosťou minimum funkcie $F(x,y,z)=y^2z^2\\left(1+\\sin^2x\\right)+(y+1)^2(z+3)^2$ a tiež minimum funkcie $G(x,y,z)=z^2\\cos x +x^2y^2+x^2e^z$. Zvolené metódy porovnajte z hľadiska presnosti a rýchlosti konvergencie.** \n"
+    "**23. Pomocou dvoch vhodných metód nájdite s dostatočnou presnosťou minimum funkcie $F(x,y,z)=y^2z^2\\left(1+\\sin^2x\\right)+(y+1)^2(z+3)^2$ a tiež minimum funkcie $G(x,y,z)=z^2\\cos x +x^2y^2+x^2e^z$. Zvolené metódy porovnajte z hľadiska presnosti a rýchlosti konvergencie.** \n"
    ]
   },
   {
@@ -530,7 +530,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -544,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.4"
   },
   "varInspector": {
    "cols": {
