--- a/Tema8/NUM_Tema8VlastneCislaVektory.ipynb
+++ b/Tema8/NUM_Tema8VlastneCislaVektory.ipynb
@@ -1632,7 +1632,7 @@
     "\\lVert\\mathbf{x}_k-(\\pm\\mathbf{v}_i)\\rVert_2=\\mathcal{O}\\left(\\left|\\dfrac{\\mu-\\lambda_i}{\\mu-\\lambda_j}\\right|^k\\right), \\quad |\\sigma_k-\\lambda_i|=\\mathcal{O}\\left(\\left|\\dfrac{\\mu-\\lambda_i}{\\mu-\\lambda_j}\\right|^{2k}\\right),\n",
     "\\end{align*} \n",
     "\n",
-    "pričom $\\pm$ znamená, že uvedený vzťah platí v každom kroku len pre jedno zo znamienok plus a mínus. **_Inverzná transformácia s posunom_** je užitočná najmä vtedy, keď nejakou metódou získame približné hodnoty vlastných čísel a chceme k nim dopočítať odpovedajúce vlastné vektory. "
+    "pričom $\\pm$ znamená, že uvedený vzťah platí v každom kroku len pre jedno zo znamienok plus a mínus. **_Inverzná iterácia s posunom_** je užitočná najmä vtedy, keď nejakou metódou získame približné hodnoty vlastných čísel a chceme k nim dopočítať odpovedajúce vlastné vektory. "
    ]
   },
   {
@@ -2063,7 +2063,7 @@
     "\n",
     "Stručne by sa dal **štandardný postup výpočtu singulárneho rozkladu** popísať takto: \n",
     "\n",
-    "1) Pomocou finitného [Golubovho-Kahanovho bidiagonalizačného algoritmu](https://netlib.org/utk/people/JackDongarra/etemplates/node198.html) získame rozklad $\\mathbf{A}=\\mathbf{U}_1\\mathbf{B}\\mathbf{V}_1'$, kde $\\mathbf{B}$ je bidiagonálna matica, ktorej nenulové prvky sa môžu nachádzať iba na hlavnej diagonále a v prvej naddiagonále, ďalej $\\mathbf{U}_1$, $\\mathbf{V}_1$ sú ortonormálne matice. \n",
+    "1) Pomocou finitného [Golubovho-Kahanovho bidiagonalizačného algoritmu](https://github.com/emchinn/Bidiagonalization/blob/master/Golub-Kahan.ipynb) (alebo [doplňujúci zdroj 1](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/GolubKahanBidiagonal1.pdf), [doplňujúci zdroj 2](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/GolubKahanBidiagonal2.pdf)) získame rozklad $\\mathbf{A}=\\mathbf{U}_1\\mathbf{B}\\mathbf{V}_1'$, kde $\\mathbf{B}$ je bidiagonálna matica, ktorej nenulové prvky sa môžu nachádzať iba na hlavnej diagonále a v prvej naddiagonále, ďalej $\\mathbf{U}_1$, $\\mathbf{V}_1$ sú ortonormálne matice. \n",
     "\n",
     "\n",
     "2) Využije sa, že vlastné čísla tridiagonálnej matice $\\mathbf{T}_r=\\mathbf{B}'\\mathbf{B}$ sú kvadráty singularných čísel matice $\\mathbf{B}$, a že vlastné vektory matice $\\mathbf{T}_r$ sú pravé singulárne vektory matice $\\mathbf{B}$. Ďalej nech $\\mathbf{T}_r=\\mathbf{V}_2\\mathbf{D}_r\\mathbf{V}_2'$ je spektrálny rozklad matice $\\mathbf{T}_r$. Použitím $\\mathbf{T}_l=\\mathbf{B}\\mathbf{B}'$, potom zo spektrálneho rozkladu $\\mathbf{T}_l=\\mathbf{U}_2'\\mathbf{D}_l\\mathbf{U}_2$ dostaneme ľavé singulárne vektory $\\mathbf{B}$. Výpočet vlastných čísel a vektorov matíc $\\mathbf{T}_r$ resp. $\\mathbf{T}_l$ sa dá efektívne realizovať pomocou modifikácie QR metódy znamej ako *dqds algoritmus*.  \n",
