--- a/Tema4/NUM_Tema4NumerickeIntegrovanie.ipynb
+++ b/Tema4/NUM_Tema4NumerickeIntegrovanie.ipynb
@@ -459,7 +459,7 @@
    "source": [
     "--- \n",
     "\n",
-    "### <font color=red> Definícia 1\n",
+    "### <font color=red> Definícia 1 </font> \n",
     " \n",
     "**_Algebraický rád $r=r(Q)$ kvadratúrnej formule $Q(f)$_** definujeme ako nezáporné celé číso také, že $R\\left(x^j\\right)=0$ pre $j=0,1,\\ldots,r$ a $R\\left(x^{r+1}\\right)\\neq0$, pričom $R$ označuje chybu (zvyšok) kvaratúrnej formule. Používa sa tiež označenie **_rád presnosti kvadratúrnej formule_**.\n",
     "\n",
@@ -625,7 +625,7 @@
    "source": [
     "--- \n",
     "\n",
-    "### <font color=red> Definícia 2\n",
+    "### <font color=red> Definícia 2 </font> \n",
     " \n",
     "**_Otvorené_** ($n+1$-bodové) **_Newtonove-Cotesove formule_** majú uzly v tvare $x_i=x_0+ih$, $i=0,1,\\ldots,n$, kde $h=(b-a)/(n+2)$ a $x_0=a+h$. \n",
     "\n",
@@ -1409,7 +1409,7 @@
    "source": [
     "--- \n",
     "\n",
-    "### <font color=red> Definícia 3\n",
+    "### <font color=red> Definícia 3 </font> \n",
     " \n",
     "Nech $L_n(x)=\\displaystyle\\sum\\limits_{i=0}^{n}f(x_i)l_i(x)$ je Lagrangeov interpolačný polynóm funkcie $f(x)$. **_Vážená interpolačná kvadratúrna formula_** je definovaná predpisom \n",
     "\n",
@@ -1435,11 +1435,13 @@
    "source": [
     "--- \n",
     "\n",
-    "### <font color=red> Definícia 4\n",
+    "### <font color=red> Definícia 4 </font> \n",
     " \n",
     "Nech je daný (vektorový) priestor (reálnych) funkcií takých, že integrál $\\displaystyle\\int_{a}^{b}w(x)f^2(x)\\,\\mathrm{d}x$ existuje a je konečný. Pre funkcie $u$, $v$ z tohto priestoru definujeme **_(vážený) skalárny súčin_** vzťahom \n",
     "\n",
-    "$$(u,v)=\\displaystyle\\int_{a}^{b}w(x)u(x)v(x)\\,\\mathrm{d}x.$$\n",
+    "$$(u,v)=\\displaystyle\\int_{a}^{b}w(x)u(x)v(x)\\,\\mathrm{d}x,$$ \n",
+    "\n",
+    "pričom $w(x)$ je tzv. váhová funkcia. \n",
     "\n",
     "---"
    ]
@@ -1450,7 +1452,7 @@
    "source": [
     "--- \n",
     "\n",
-    "### <font color=red> Definícia 5\n",
+    "### <font color=red> Definícia 5 </font> \n",
     " \n",
     "Je daný systém polynómov $\\left\\{p_n(x)\\right\\}_{n=0}^{\\infty}$ stupňov $n$. Hovoríme, že tento systém je na intervale $\\langle a,b \\rangle$ **_ortogonálny_**, keď platí \n",
     "\n",
@@ -1523,7 +1525,7 @@
    "source": [
     "--- \n",
     "\n",
-    "### <font color=red> Definícia 6\n",
+    "### <font color=red> Definícia 6 </font> \n",
     "\n",
     "Nech je daný systém ortogonálnych polynómov $\\left\\{p_n(x)\\right\\}_{n=0}^{\\infty}$ stupňov $n$.\n",
     "\n",
@@ -2145,7 +2147,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2159,7 +2161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.10"
   },
   "varInspector": {
    "cols": {
