--- a/Tema0/NUM_Tema0DoleziteDefinicieTvrdenia.ipynb
+++ b/Tema0/NUM_Tema0DoleziteDefinicieTvrdenia.ipynb
@@ -2505,7 +2505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Existujú rôzne prístupy **ako odhadnúť rád konvergencie $p$**. Stručne popíšeme myšlienku jedného z nich, ktorý celkom slušne funguje - svedčí o tom kód uvedený nižšie. Princíp je nasledovný. Predpokladajme, že je k dispozícii (konečná) postupnosť chýb $\\left\\{\\varepsilon_k\\right\\}$ (podobne ako v Príklade 11). Z Definície 3 máme vzťah $\\varepsilon_{k+1}=C\\varepsilon_k^p$, kde $p$ je rád rýchlosti konvergencie, ktorý chceme odhadnúť. Logaritmovaním uvedeného rekurentného vzťahu (diskrétny dynamický systém resp. diferenčná rovnica) a zavedením označenia $z_k=\\ln(\\varepsilon_k)$ dostaneme $z_{k+1}=pz_{k}+\\ln(C)$. Riešením tejto diferenčnej rovnice štandardnou technikou s dodatočnou počiatočnou podmienkou $z_0=0$ získame $z_k=\\dfrac{p^k\\ln(C)}{p-1}-\\dfrac{\\ln(C)}{p-1}$. Odčítaním $z_k$ od $z_{k+1}$, logaritmovaním, následnou úpravou a spätnou substitúciou dôjdeme k vzťahu $\\ln\\left|\\ln\\left(\\dfrac{\\varepsilon_{k+1}}{\\varepsilon_k}\\right)\\right|=k\\ln{p}$. Ak položíme $y_k=\\ln\\left|\\ln\\left(\\dfrac{\\varepsilon_{k+1}}{\\varepsilon_k}\\right)\\right|$, $x_k=k$, potom $\\ln(p)$ sa dá odhadnúť metódou najmenších štvorcov (spomeňte si na odvodenie regresnej priamky z UAD). Na záver si už len stačí uvedomiť, že $e^{\\ln(p)}=p$. \n"
+    "Existujú rôzne prístupy **ako odhadnúť rád konvergencie $p$**. Stručne popíšeme myšlienku jedného z nich, ktorý celkom slušne funguje - svedčí o tom kód uvedený nižšie. Princíp je nasledovný. Predpokladajme, že je k dispozícii (konečná) postupnosť chýb $\\left\\{\\varepsilon_k\\right\\}$ (podobne ako v Príklade 11). Z Definície 3 máme vzťah $\\varepsilon_{k+1}=C\\varepsilon_k^p$, kde $p$ je rád rýchlosti konvergencie, ktorý chceme odhadnúť. Logaritmovaním uvedeného rekurentného vzťahu (diskrétny dynamický systém resp. diferenčná rovnica) a zavedením označenia $z_k=\\ln(\\varepsilon_k)$ dostaneme $z_{k+1}=pz_{k}+\\ln(C)$. Riešením tejto diferenčnej rovnice [štandardnou technikou](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/Recurrence_Relations.pdf) s dodatočnou počiatočnou podmienkou $z_0=0$ získame $z_k=\\dfrac{p^k\\ln(C)}{p-1}-\\dfrac{\\ln(C)}{p-1}$. Odčítaním $z_k$ od $z_{k+1}$, logaritmovaním, následnou úpravou a spätnou substitúciou dôjdeme k vzťahu $\\ln\\left|\\ln\\left(\\dfrac{\\varepsilon_{k+1}}{\\varepsilon_k}\\right)\\right|=k\\ln{p}$. Ak položíme $y_k=\\ln\\left|\\ln\\left(\\dfrac{\\varepsilon_{k+1}}{\\varepsilon_k}\\right)\\right|$, $x_k=k$, potom $\\ln(p)$ sa dá odhadnúť metódou najmenších štvorcov (spomeňte si na odvodenie regresnej priamky z UAD). Na záver si už len stačí uvedomiť, že $e^{\\ln(p)}=p$. \n"
    ]
   },
   {
@@ -2840,7 +2840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
