--- a/Tema1/NUM_Tema1UvodNumerickeVypocty.ipynb
+++ b/Tema1/NUM_Tema1UvodNumerickeVypocty.ipynb
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Každý študent strednej školy pozná vzorec pre výpočet koreňov kvadratickej rovnice. Väčšina maturantov by si mohla (krátko po maturite) spomenúť na postup riešenia kubickej rovnice. Niektorí si možno spomenú na postup riešenia rovnice štvrtého stupňa a na postup riešenia reciprokých (recipročných) rovníc do stupňa 8 resp. 9. Ako ale vyzerá postup riešenia rovníc stupňa päť a viac? Takýto explicitný postup (vzorec) neexistuje. Nie preto, že nebol objavený, ale proto, že bolo dokázané, že existovat nemôže. To však nič nemení na situácii, že nájsť korene algebraických rovnic stupňa 5 a viac niekdy potrebujeme. Príkladom môže byť situácia, kedy potrebujeme určiť tzv. vlastné čísla matice. \n",
+    "Každý študent strednej školy pozná vzorec pre výpočet koreňov kvadratickej rovnice. Väčšina maturantov by si mohla (krátko po maturite) spomenúť na postup riešenia kubickej rovnice. Niektorí si možno spomenú na postup riešenia rovnice štvrtého stupňa a na postup riešenia reciprokých (recipročných) rovníc do stupňa 8 resp. 9. Ako ale vyzerá postup riešenia rovníc stupňa päť a viac? Takýto explicitný postup (vzorec) neexistuje. Nie preto, že nebol objavený, ale preto, že bolo dokázané, že existovat nemôže. To však nič nemení na situácii, že nájsť korene algebraických rovnic stupňa 5 a viac niekdy potrebujeme. Príkladom môže byť situácia, kedy potrebujeme určiť tzv. vlastné čísla matice. \n",
     "\n",
     "Zrejme poznáte pojmy určitý a neurčitý integrál. Pri výpočte $\\displaystyle\\int_{0}^{\\pi/2}\\cos x\\,\\mathrm{d}x$ najskôr nájdeme primitívnu funkciu k funkcii kosínus, dosadíme do nej hornú a dolnú hranicu, vzájomne odčítame a tento rozdiel prehlásime za výsledok. K niektorým funkciám však primitívne funkcie neexistujú. Takým príkladom je funkcia $f(x)=e^{-x^2}$, pričom ide o jednu zo základných funkcií používaných v teórii pravdepodobnosti, kde výpočet určitého integrálu z tejto funkcie umožňuje nájsť požadované pravdepodobnosti. V tomto prípade však nie je možné určiť hodnotu integrálu pomocou primitívnej funkcie. \n",
     "\n",
@@ -1367,13 +1367,13 @@
     "\n",
     "a) **_Jednoduchá presnosť_** (anglicky *single precision*). Použijú sa $4$ bajty, t. j. $32$ bitov (viac napr. [tu](https://homel.vsb.cz/~hom50/INFORM/HWDDATA/HWDDATA.HTM)), z toho $23$ bitov pre mantisu, $8$ bitov pre exponent a $1$ bit pre znamienko mantisy. Keďže mantisa je normalizovaná, pre $x\\neq0$ je $d_1=0$. Táto cifra sa neukladá, preto je počet cifier mantisy $p=24$. Rozsah exponentu je $-126\\le e \\le 127$. Zobraziť je možné dekadické čísla s absolútnou hodnotou v rozsahu \n",
     "\n",
-    "$$UFL=2^{-126}\\doteq1.2\\times10^{-38} \\qquad \\text{ až } OFL=\\left(2-2^{-23}\\right)\\times2^{127}\\doteq3.4\\times10^{38}$$ \n",
+    "$$UFL=2^{-126}\\doteq1.2\\times10^{-38} \\qquad \\text{ až } \\qquad OFL=\\left(2-2^{-23}\\right)\\times2^{127}\\doteq3.4\\times10^{38}$$ \n",
     "\n",
     "a nulu (má všetky bity nulové). Strojová presnosť $\\varepsilon_m=2^{-23}\\doteq1.2\\times10^{-7}$. Hovoríme, že mantisa má zhruba $7$ dekadických cifier presnosti. \n",
     "\n",
     "b) **_Dvojnásobná presnosť_** (anglicky *double precision*). Použije sa $8$ bajtov, t. j. $64$ bitov, z toho $52$ bitov pre mantisu, $11$ bitov pre exponent a $1$ bit pre znamienko mantisy. Prvý bit mantisy sa neukladá (pre $x\\neq0$ je $d_1=1$), takže mantisa má $p=53$ cifier. Rozsah exponentu je $-1022\\le e \\le 1023$. Zobraziť je možné dekadické čísla s absolútnou hodnotou  v rozsahu \n",
     "\n",
-    "$$UFL=2^{-1022}\\doteq2.2\\times10^{-308} \\qquad \\text{ až } OFL=\\left(2-2^{-52}\\right)\\times2^{1023}\\doteq1.8\\times10^{308}$$ \n",
+    "$$UFL=2^{-1022}\\doteq2.2\\times10^{-308} \\qquad \\text{ až } \\qquad OFL=\\left(2-2^{-52}\\right)\\times2^{1023}\\doteq1.8\\times10^{308}$$ \n",
     "\n",
     "a nulu (má všetky bity nulové). Strojová presnosť $\\varepsilon_m=2^{-52}\\doteq2.2\\times10^{-16}$. Hovoríme, že mantisa má zhruba $16$ dekadických cifier presnosti. \n",
     "\n",
@@ -1598,7 +1598,7 @@
     "\n",
     "$$fl(9.4)=9.4+2^{-49}-0.4\\times2^{-48}=9.4+(1-0.8)2^{-49}=9.4+0.2\\times2^{-49}.$$\n",
     "\n",
-    "Inými slovami, počítač využívajúci dvojnásobnú presnosť a zaokrúhľovanie k najbližšiemu sa pri ukladaní čísla $9.4$ dopúšťa chyby rádovo $0.2\\times2^{-49}$. Táto chyba $0.2\\times2^{-49}$ sa nazýva ***zaokrúhľovacia chyba*** (*round-off error* - zapríčinená limitovanou strojovou presnosťou t. j. rozdiel medzi aproximáciou čísla použitého pri výpočte a jeho presnou (správnou) hodnotou). \n",
+    "Inými slovami, počítač využívajúci dvojnásobnú presnosť a zaokrúhľovanie k najbližšiemu sa pri ukladaní čísla $9.4$ dopúšťa chyby rádovo $0.2\\times2^{-49}$. Táto chyba $0.2\\times2^{-49}$ sa nazýva **_zaokrúhľovacia chyba_** (*round-off error* - zapríčinená limitovanou strojovou presnosťou t. j. rozdiel medzi aproximáciou čísla použitého pri výpočte a jeho presnou (správnou) hodnotou). \n",
     "\n",
     "**Je dôležité uvedomiť si, že číslo s pohyblivou rádovou čiarkou predstavujúce $9.4$ sa nerovná $9.4$, hoci je k nemu veľmi blízko.** \n",
     "\n",
@@ -1624,7 +1624,7 @@
     "\n",
     "![obr1.PNG](attachment:obr1.PNG) \n",
     "\n",
-    "Vzhľadom k zaokrúhľovaniu sa výsledok uloží ako $1.\\times2^0=1$. Preto $1+2^{-53}$ je rovné $1$ v dvojnásobnej presnosti v rámci IEEE aritmetiky. Všimnime si, že $2^{-53}$ je najväčšie číslo s pohyblivou rádovou čiarkou s touto vlastnosťou: čokoľvek väčšie pripočítané k $1$ by viedlo k súčtu väčšiemu ako $1$ podľa počítačovej aritmetiky.\n",
+    "Vzhľadom k zaokrúhľovaniu sa výsledok uloží ako $1.0\\times2^0=1$. Preto $1+2^{-53}$ je rovné $1$ v dvojnásobnej presnosti v rámci IEEE aritmetiky. Všimnime si, že $2^{-53}$ je najväčšie číslo s pohyblivou rádovou čiarkou s touto vlastnosťou: čokoľvek väčšie pripočítané k $1$ by viedlo k súčtu väčšiemu ako $1$ podľa počítačovej aritmetiky.\n",
     "\n",
     "--- "
    ]
@@ -2245,7 +2245,7 @@
     "![graf1.PNG](attachment:graf1.PNG) \n",
     "$$\\text{Zdroj: Gilli et al. (2019).}$$\n",
     "\n",
-    "Všimnime si, že pre $n>10$, je algoritmus $A_2$ rýchlejší ako $A_1$. Keďže výpočtový čas sa stáva kritickým pre rastúce hodnoty $n$, je to práve _rád_ počítacej funkcie, ktorý určuje zložitosť algoritmu. ***Rád*** funkcie je formalizovaný pomocou značenia $O(.)$, pričom **definujeme: funkcia $g(n)$ je rádu $O\\left(f(n)\\right)$, ak existujú konštanty $c_0$, $n_0$ také, že $g(n)<c_0f(n)$ pre všetky $n>n_0$**. Teda (výpočtová) zložitosť algoritmu $A_1$ je $O\\left(n^2\\right)$, naproti tomu algoritmus $A_2$ má zložitosť $O(n)$. Ďalej napr. zložitosť algoritmu s počítacou funkciou $C(n)=\\frac{1}{3}n^3+n^2+\\frac{2}{3}n$, vyjadrujúcou počet elementárny operácií, je $O(n^3)$. \n",
+    "Všimnime si, že pre $n>10$, je algoritmus $A_2$ rýchlejší ako $A_1$. Keďže výpočtový čas sa stáva kritickým pre rastúce hodnoty $n$, je to práve _rád_ počítacej funkcie, ktorý určuje zložitosť algoritmu. **_Rád_** funkcie je formalizovaný pomocou značenia $O(.)$, pričom **definujeme: funkcia $g(n)$ je rádu $O\\left(f(n)\\right)$, ak existujú konštanty $c_0$, $n_0$ také, že $g(n)<c_0f(n)$ pre všetky $n>n_0$**. Teda (výpočtová) zložitosť algoritmu $A_1$ je $O\\left(n^2\\right)$, naproti tomu algoritmus $A_2$ má zložitosť $O(n)$. Ďalej napr. zložitosť algoritmu s počítacou funkciou $C(n)=\\frac{1}{3}n^3+n^2+\\frac{2}{3}n$, vyjadrujúcou počet elementárny operácií, je $O(n^3)$. \n",
     "\n",
     "Z hľadiska rádu funkcie, vyjadrujúcej počet elementárnych operácií, delíme algoritmy do dvoch základných skupín: \n",
     "\n",
