--- a/Tema1/NUM_Tema1UvodNumerickeVypocty.ipynb
+++ b/Tema1/NUM_Tema1UvodNumerickeVypocty.ipynb
@@ -1046,7 +1046,9 @@
     "\\left|\\tilde{x}-x\\right|\\le5\\cdot10^{e-k}\n",
     "\\end{equation*} \n",
     "\n",
-    "t. j. keď sa $\\tilde{x}$ líši od $x$ nanajvýš o 5 jednotiek rádu prislúchajúcemu k nasledujúcej cifre. Pokiaľ \\eqref{eq:decadSigDig} platí pre $k\\le p$ ale pre $k=p+1$ už neplatí, vtedy hovoríme, že $\\tilde{x}$ má $p$ **_platných cifier_**. Číslo $\\tilde{x}=\\pm d_1d_2d_3\\ldots d_p\\cdot10^e$, ktoré má všetkých $p$ cifier platných, je **_správne zaokrúhlenou hodnotou_** čísla $x$. "
+    "t. j. keď sa $\\tilde{x}$ líši od $x$ nanajvýš o 5 jednotiek rádu prislúchajúcemu k nasledujúcej cifre. Pokiaľ \\eqref{eq:decadSigDig} platí pre $k\\le p$ ale pre $k=p+1$ už neplatí, vtedy hovoríme, že $\\tilde{x}$ má $p$ **_platných cifier_**. Číslo $\\tilde{x}=\\pm d_1d_2d_3\\ldots d_p\\cdot10^e$, ktoré má všetkých $p$ cifier platných, je **_správne zaokrúhlenou hodnotou_** čísla $x$. \n",
+    "\n",
+    "Ďalšie doplňujúce informácie k platných cifrám, ktoré sú v súlade s uvedenou definíciou \\eqref{eq:decadSigDig}, je možné nájsť napr. tu: [zdroj1](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/PlatneCisliceWikipedie.pdf), [zdroj2](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/significant-figures.pdf), [zdroj3](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/SignificantDigits.pdf). Kľúčové je ale uvažovať tzv. [vedeckú notáciu čísel](https://cs.wikipedia.org/wiki/V%C4%9Bdeck%C3%BD_z%C3%A1pis_%C4%8D%C3%ADsel) resp. [semi-logaritmický zápis](https://votruba.in/mat/semilog.pdf) (všetky číslice uvedené v tomto type zápisu sú automaticky platné, pričom predpokladáme, že prvá číslica je nenulová - podobne ako je to uvedené vyššie pri vzťahu \\eqref{eq:decadSigDig}). "
    ]
   },
   {
