--- a/Tema2/NUM_Tema2AproximaciaFunkcii.ipynb
+++ b/Tema2/NUM_Tema2AproximaciaFunkcii.ipynb
@@ -3672,7 +3672,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Po častiach lineárna interpolácia (lineárne splajny)"
+    "## Po častiach lineárna interpolácia"
    ]
   },
   {
