--- a/Tema2/NUM_Tema2AproximaciaFunkcii.ipynb
+++ b/Tema2/NUM_Tema2AproximaciaFunkcii.ipynb
@@ -4036,7 +4036,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vezmime do úvahy ešte ďasie dva extra body mriežky, konkrétne $x_{-1}=x_0-h$, $x_{N+1}=x_N+h$ a uvažujme B-splajny $s_{-1}(x)$ a $s_{N+1}(x)$ centrované v bodoch $x_{-1}$ a $x_{N+1}$. \n",
+    "Vezmime do úvahy ešte ďalšie dva extra body mriežky, konkrétne $x_{-1}=x_0-h$, $x_{N+1}=x_N+h$ a uvažujme B-splajny $s_{-1}(x)$ a $s_{N+1}(x)$ centrované v bodoch $x_{-1}$ a $x_{N+1}$. \n",
     "\n",
     "Pre $-1\\le j \\le N+1$ dodefinujme \n",
     "\n",
@@ -4201,7 +4201,7 @@
     "\n",
     "#### Poznámka 14 \n",
     "\n",
-    "Splnenie podmienok $\\Phi_c'(x_0)=f'(x_0)$, $\\Phi_c'(x_N)=f'(x_N)$ môže byť obtiažne v prípade, keď funkcia resp. jej predpis nie je explicitne daný. Vtedy je možné pre požadované derivácie využiť aproximácie (viac v téme 3), ktoré sú rádu $h^4$ resp. ich chyba je $\\mathcal{O}\\left(h^4\\right)$. Príkladom takých aproximácií sú tieto vzorce, kde *error* značí chybový člen resp. zvyšok:  \n",
+    "Splnenie podmienok $\\Phi_c'(x_0)=f'(x_0)$, $\\Phi_c'(x_N)=f'(x_N)$ môže byť obtiažne v prípade, keď funkcia resp. jej predpis nie je explicitne daný. Vtedy je možné pre požadované derivácie využiť aproximácie (viac v téme 3), ktoré sú rádu $h^4$ resp. ich chyba je $\\mathcal{O}\\left(h^4\\right)$. Príkladom takých aproximácií sú tieto vzorce, kde $E$ značí chybový člen resp. zvyšok:  \n",
     "\n",
     "\\begin{align*} \n",
     "f'(x_0)&=\\dfrac{1}{12h}\\left[-25f(x_0)+48f(x_0+h)-36f(x_0+2h)+16f(x_0+3h)-3f(x_0+4h)\\right] + E\\\\\n",
@@ -4248,7 +4248,7 @@
     "\n",
     "![ineq3.PNG](attachment:ineq3.PNG) \n",
     "\n",
-    "To vlastne znamená, že ukotvený kubický splajnový interpolant je najhladší spomedzi všetkých ukotvených $C^2$-interpolantov na intervale $\\langle a,b \\rangle$, konkrétne najhladší v zmysle minimalizácie výrazu $\\displaystyle\\int_{a}^{b}\\left(u''(x)\\right)^2\\,\\mathrm{d}x$ (pričom druhá derivácia funkcie resp. krivky súvisí s jej zakrivením). \n",
+    "To vlastne znamená, že ukotvený kubický splajnový interpolant je najhladší spomedzi všetkých ukotvených $C^2$-interpolantov na intervale $\\langle a,b \\rangle$, konkrétne najhladší v zmysle minimalizácie výrazu $\\displaystyle\\int_{a}^{b}\\left(u''(x)\\right)^2\\,\\mathrm{d}x$ (pričom druhá derivácia funkcie resp. krivky súvisí s jej zakrivením resp. krivosťou). \n",
     "\n",
     "---"
    ]
@@ -4969,7 +4969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   },
   "varInspector": {
    "cols": {
